# SPLN-TP1

./: README.md  dif.py  exemplos.md  harryEN.txt  input.txt  report.ipynb  report.md  vader.py
.github/workflows/: python-publish.yml
sentimentAnalizis/: pyproject.toml
sentimentAnalizis/datasets/: lemmas.json  words.json
sentimentAnalizis/datasets/leIA/: vader_lexicon.txt
sentimentAnalizis/sentimentAnalizis/: Token.py  Trie.py  __init__.py  main.py  parser.py  utils.py
sentimentAnalizis/sentimentAnalizis/datasetParsers/: leIA.py  linguaKit.py  sentilex.py  utils.py
sentimentAnalizis/sentimentAnalizis/datasets/: boosters.json  emojis.json  words.json
spln_sentiment_analysis/spln_sentiment_analysis/tests/: txt
