[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sentimentAnalizis"
authors = [
    {name = "Lumafepe", email = "lumafepe@gmail.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dynamic = ["version", "description"]
dependencies = [ "unidecode" ] #TODO:: FIXME

[project.scripts]
sentAnalize = "sentimentAnalizis:main"
sentAnalize-init = "sentimentAnalizis:init"
    